--- a/Swiftris iOS/Base.lproj/Main.storyboard
+++ b/Swiftris iOS/Base.lproj/Main.storyboard
@@ -17,67 +17,61 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bZC-qY-GIE" customClass="SKView">
+                            <view contentMode="scaleAspectFill" translatesAutoresizingMaskIntoConstraints="NO" id="bZC-qY-GIE" customClass="SKView">
                                 <rect key="frame" x="291" y="506" width="84" height="100"/>
                                 <subviews>
-                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="whitebg" translatesAutoresizingMaskIntoConstraints="NO" id="gjg-DS-Upw">
-                                        <rect key="frame" x="0.0" y="-4" width="84" height="108"/>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="whitebg" translatesAutoresizingMaskIntoConstraints="NO" id="FRa-6u-bXA">
+                                        <rect key="frame" x="0.0" y="0.0" width="84" height="100"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                     </imageView>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="LEVEL" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gp8-rV-f1Q">
-                                        <rect key="frame" x="18" y="17" width="49" height="21"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="LEVEL" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gp8-rV-f1Q">
+                                        <rect key="frame" x="0.0" y="0.0" width="84" height="21"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <color key="textColor" systemColor="systemPurpleColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="999" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wiT-c2-Xvj">
-                                        <rect key="frame" x="20" y="46" width="45" height="39"/>
-                                        <constraints>
-                                            <constraint firstAttribute="height" constant="39" id="ut3-N8-gLE"/>
-                                        </constraints>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="1" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wiT-c2-Xvj">
+                                        <rect key="frame" x="-0.0027700831012680283" y="30.501385041553249" width="84" height="38.999999999999972"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <fontDescription key="fontDescription" name=".AppleSystemUIFont" family=".AppleSystemUIFont" pointSize="24"/>
                                         <color key="textColor" systemColor="systemPurpleColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                 </subviews>
-                                <constraints>
-                                    <constraint firstItem="wiT-c2-Xvj" firstAttribute="top" secondItem="gp8-rV-f1Q" secondAttribute="bottom" constant="4" id="6P6-Q7-P3P"/>
-                                    <constraint firstItem="wiT-c2-Xvj" firstAttribute="centerX" secondItem="gp8-rV-f1Q" secondAttribute="centerX" id="Aov-sa-HjI"/>
-                                    <constraint firstAttribute="bottom" secondItem="wiT-c2-Xvj" secondAttribute="bottom" id="LR6-sP-a4C"/>
-                                    <constraint firstItem="wiT-c2-Xvj" firstAttribute="centerX" secondItem="bZC-qY-GIE" secondAttribute="centerX" id="z9V-JT-Njd"/>
-                                </constraints>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </view>
-                            <view contentMode="scaleToFill" placeholderIntrinsicWidth="84" placeholderIntrinsicHeight="100" translatesAutoresizingMaskIntoConstraints="NO" id="WfZ-aF-fVr" customClass="SKView">
+                            <view contentMode="scaleAspectFill" placeholderIntrinsicWidth="84" placeholderIntrinsicHeight="100" translatesAutoresizingMaskIntoConstraints="NO" id="WfZ-aF-fVr" customClass="SKView">
                                 <rect key="frame" x="291" y="632" width="84" height="100"/>
                                 <subviews>
-                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="whitebg" translatesAutoresizingMaskIntoConstraints="NO" id="gA6-OB-eRN">
-                                        <rect key="frame" x="0.0" y="0.0" width="84" height="108"/>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="whitebg" translatesAutoresizingMaskIntoConstraints="NO" id="5RZ-Ea-isM">
+                                        <rect key="frame" x="0.0" y="0.0" width="84" height="100"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                     </imageView>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="SCORE" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="avl-TB-UpY">
-                                        <rect key="frame" x="7" y="20" width="70" height="21"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="SCORE" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="avl-TB-UpY">
+                                        <rect key="frame" x="0.0" y="4" width="84" height="21"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <color key="textColor" name="AccentColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="999" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cKZ-j5-G6Y">
-                                        <rect key="frame" x="19.5" y="45" width="45" height="29"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="0" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="86" translatesAutoresizingMaskIntoConstraints="NO" id="cKZ-j5-G6Y">
+                                        <rect key="frame" x="-0.56786703600982946" y="35.714681440446611" width="85" height="28.999999999999943"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="24"/>
                                         <color key="textColor" name="AccentColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                 </subviews>
-                                <constraints>
-                                    <constraint firstItem="avl-TB-UpY" firstAttribute="top" secondItem="WfZ-aF-fVr" secondAttribute="top" constant="20" id="2x5-Y8-waV"/>
-                                    <constraint firstItem="cKZ-j5-G6Y" firstAttribute="top" secondItem="avl-TB-UpY" secondAttribute="bottom" constant="4" id="AYS-GV-ATT"/>
-                                    <constraint firstItem="avl-TB-UpY" firstAttribute="leading" secondItem="WfZ-aF-fVr" secondAttribute="leading" constant="7" id="Nq9-Pi-4Hk"/>
-                                    <constraint firstItem="avl-TB-UpY" firstAttribute="centerX" secondItem="cKZ-j5-G6Y" secondAttribute="centerX" id="gTC-dM-5BQ"/>
-                                    <constraint firstItem="avl-TB-UpY" firstAttribute="centerX" secondItem="WfZ-aF-fVr" secondAttribute="centerX" id="h5r-NH-Usc"/>
-                                </constraints>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </view>
-                            <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="SWIFTRIS" borderStyle="roundedRect" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="N8W-wf-nvY">
+                            <textField opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="SWIFTRIS" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="N8W-wf-nvY">
                                 <rect key="frame" x="95" y="89" width="225" height="34"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" white="1" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <fontDescription key="fontDescription" name="MarkerFelt-Wide" family="Marker Felt" pointSize="40"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
